# peninaocubo

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  1_de_8  1_de_8.py  1_de_8_v7.py  2_de_8  2_de_8.py  3_de_8  3_de_8.py  4_de_8  4_de_8.py  5_de_8  5_de_8.py  8_de_8  AGENT_IMPLEMENTATION_SUMMARY.md  ANALISE_COMPLETA_INICIAL.md  ANALISE_ESTADO_ATUAL_COMPLETA.md  AUDITORIA_COMPLETA_V8.md  AUDITORIA_COMPLETA_V8_FINAL.md  AUDITORIA_P0_COMPLETA.md  AUDITORIA_PENIN_OMEGA_COMPLETA.md  AUDIT_COMPLETE_REPORT.md  AUDIT_P0_CORRECTIONS_SUMMARY.md  AUDIT_SISTEMA_COMPLETO.md  CANARY_VIDA_PLUS_REPORT.json  CHANGELOG.md  CLEANUP_SUMMARY.txt  CODE_OF_CONDUCT.md  COMMIT_MESSAGE_V8.txt  COMMIT_P0_V7.1.md  COMPLETE_FIX_REPORT.md  COMPLETE_REAUDIT.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONFLICT_RESOLUTION_COMPLETE.md  CONFLICT_RESOLUTION_REPORT.md  CONSOLIDACAO_COMPLETA.md  (+163 more)
.github/: PROJECT_STATUS.md
.github/workflows/: chaos-tests.yml  ci-enhanced.yml  ci.yml  dependency-check.yml  docs.yml  fusion-gates.yml  fusion.yml  lint-yaml.yml  operator-build.yml  policy-matrix.yml  release.yml  security.yml
.penin_omega/: champion.json  ledger.db
1_de_8/: __init__.py
3_de_8/: __init__.py
6_de_8/: __init__.py
benchmarks/: BENCHMARK_REPORT.md  README.md  __init__.py  analyze_performance.py  benchmark_master_equation.py  compare_results.py  optimized_loss.py
demo/: demo_vida_plus.py  run_demo.py
deploy/: Dockerfile  deploy.sh  docker-compose.chaos.yml  docker-compose.observability.yml  docker-compose.yml  entrypoint.sh  loki.yml  prometheus.yml
deploy/alertmanager/: config.yml
deploy/grafana/: datasources-full.yml
deploy/loki/: config.yml
deploy/nginx/: nginx.conf  ssl-setup.sh
deploy/operator/: ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Makefile  QUICKSTART.md  README.md  penin_operator.py  requirements.txt  validate.sh
deploy/prometheus/: penin_alerts.yml  prometheus-enhanced.yml  prometheus.yml
deploy/promtail/: config.yml
deploy/tempo/: config.yml
docs/: ATTESTATION_IMPLEMENTATION_REPORT.md  CHAOS_ENGINEERING_SUMMARY.md  CHAOS_TEST_ARCHITECTURE.txt  COMPLETE_SYSTEM_GUIDE.md  DOCUMENTATION_INDEX.md  FUSION_AUDIT.md  HASH_ALGORITHM_MIGRATION.md  HASH_REFACTORING_SUMMARY.md  INDEX.md  SETUP.md  SR_OMEGA_MENTAL_STATE.md  architecture.md  attestation.md  caos_guide.md  equations.md  ethics.md  history.json  index.md  network_discovery.md  persistence.md  phase4_cma_es.md  security.md
docs/archive/: COMMIT_MESSAGE_P0_AUDIT.md  ENTREGA_COMPLETA_FINAL.md  ENTREGA_FINAL_VIDA_PLUS.md  EVOLUTION_COMPLETE.md  EVOLUTION_COMPLETE_SUMMARY.md  FINAL_PROFESSIONALIZATION_PLAN.md  FINAL_REPORT_VIDA_PLUS.md  IMPLEMENTACOES_REALIZADAS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MISSAO_CUMPRIDA.md  MISSAO_CUMPRIDA_2025.md  PROFESSIONALIZATION_REPORT.md  PROXIMOS_PASSOS_TECNICOS.md  PULL_REQUEST.md  QUICK_APPROVAL_GUIDE.md  README.md  README_FINAL.md  README_V8_UPGRADE.md  REORGANIZATION_SUMMARY.md  SISTEMA_AUDITADO_COMPLETO.md  SUMARIO_EXECUTIVO_P0.md  SUMARIO_EXECUTIVO_V8.md  UPGRADE_V8_COMPLETO.md  V8_UPGRADE_SUMMARY.md  VALIDATION_REPORT_V8.md  VIDA_PLUS_COMPLETE.md  VIDA_PLUS_IMPLEMENTATION_REPORT.md  VIDA_PLUS_SUMMARY.md
docs/features/: f7_fractal_coherence.md
docs/guides/: CAOS_PLUS_GUIDE.md  MIDWIVING_PROTOCOL_IMPLEMENTATION.md  llm_providers.md  master_equation.md
docs/operations/: backup_retention.md  ha_deployment.md
docs/reports/: ANALYSIS_REPORT.md  EXEC_SUMMARY_SESSION.md  IMPLEMENTATION_PROGRESS.md  MISSION_ACCOMPLISHED_REPORT.md  PROGRESS_REPORT.md  SESSION_REPORT_IA_CUBED.md  SESSION_SUMMARY.md
docs/research/: MIDWIVING_PROTOCOL_RESEARCH_SUMMARY.md
docs/stylesheets/: extra.css
examples/: README.md  attestation_integration.py  demo_60s_complete.py  demo_blake2b_hash.py  demo_cli_query.py  demo_complete_pipeline.py  demo_complete_system.py  demo_fractal_coherence_f7.py  demo_midwiving_protocol.py  demo_p0_simple.py  demo_p0_system.py  demo_quickstart.py  demo_router.py  demo_sr_omega_mental_state.py  demo_symbolicai.py  network_discovery_example.py  persistence_example.py  phase4_cma_es_demo.py
fusion/: megaIAAA.plan.staging.yaml  megaIAAA.plan.strict.yaml  megaIAAA.plan.yaml
fusion_results/: audit_summary.csv  escalated.jsonl  omega_state.json  optuna_study.db  summary.csv  top_50.md
penin/: ARCHITECTURE.md  __init__.py  __main__.py  auto_docs.py  bridge.py  cache.py  cli.py  config.py  logging.py  policies.py  router.py  router_complete.py  router_enhanced.py  router_smoke.py
penin/autoregen/: __init__.py  (+2 more)
policies/: budget_policies.rego  evolution_policies.rego  foundation.yaml  fusion_policies.yaml  sigma_guard.rego
scripts/: _common_fusion.py  audit_fusion.py  check_dependency_drift.py  cleanup_docs.sh  consolidate_documentation.py  consolidate_duplicates.py  fix_lints_batch.py  forever_fusion.sh  generate_sbom.sh  health_check.sh  metabolize_repo.py  omega_cycle.py  prune_worms.py  run_all_tests.sh  run_chaos_tests.sh  run_smart.py  run_tests.sh  security_audit.sh  setup_dev_env.sh  summarize_fusion.py  update_dependencies.py  validate_caos_documentation.py  validate_iaaa.py
tests/: CHAOS_TESTING.md  README_PROPERTY_TESTS.md  chaos_utils.py  conftest.py  test_attestation.py  test_attestation_standalone.py  test_autoregen.py  test_basic_pipeline.py  test_budget_tracker.py  test_cache_hmac.py  test_caos.py  test_caos_core_comprehensive.py  test_caos_unique.py  test_chaos_engineering.py  test_chaos_examples.py  test_cli_smoke.py  test_concurrency.py  test_endpoints_smoke.py  test_equations_core.py  test_equations_smoke.py  test_fibonacci_tools.py  test_final_edge_cases.py  test_fractal.py  test_fractal_coherence_f7.py  test_guard_comprehensive.py  test_hash_utils.py  test_integration_complete.py  test_integration_vida_plus.py  test_ledger_comprehensive.py  test_life_eq.py  test_life_equation.py  test_linf_complete.py  test_log_redaction.py  test_math_comprehensive.py  test_math_core.py  test_mutation_generator.py  test_omega_modules.py  test_omega_scoring_caos.py  test_opa_policies.py  test_p0_audit_corrections.py  (+21 more)
(+8178 files in other folders)
