[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peninaocubo"
version = "0.8.0"
description = "PENIN-Ω auto-evolution system (CLI + omega modules)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Daniel Penin" }]
keywords = ["auto-evolution", "WORM", "ethics", "CAOS+", "SR-Ω∞"]
dependencies = [
  "pydantic>=2.0.0",
  "pydantic-settings>=2.4.0",
  "psutil>=5.9.0",
  "tenacity>=8.2.0",
  "orjson>=3.9.0",
]

[project.optional-dependencies]
full = [
  "numpy>=1.24.0",
  "prometheus-client>=0.16.0",
  "structlog>=23.1.0",
  "redis>=4.5.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "huggingface_hub>=0.24.0",
  "google-genai>=0.3.0",
  "openai>=1.40.0",
  "anthropic>=0.40.0",
  "mistralai>=1.2.4",
  "xai-sdk>=0.2.1",
  "kaggle>=1.6.14",
  "faiss-cpu>=1.8.0",
  "tiktoken>=0.7.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.1",
]

dev = [
  "pytest>=7.3.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.6.0",
  "black>=23.0.0",
  "mypy>=1.3.0",
  "gitleaks>=8.18.0; platform_system=='Linux' or platform_system=='Darwin'",
]

[project.scripts]
penin = "penin.cli:main"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","W","I","UP","B","PL"]
ignore = ["PLR0912","PLR0913","PLR0915","PLR2004","E402","PLC0415"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E402","PLC0415","PLR2004","RUF001","RUF002"]
